# hackathon-poc

./: .gitignore  README.md  check-jwt-secrets.sh  docker-compose.yml  pyproject.toml
.bmad-core/: install-manifest.yaml
agent-starter-react/: .eslintrc.json  app-config.ts  package-lock.json  package.json  pnpm-lock.yaml
agent-starter-react-native/: package-lock.json  package.json
agent-starter-react-native/hooks/: useBiometricAuth.ts  useConnectionDetails.ts  useLogin.ts
agent-starter-react-native/lib/: auth.ts
agent-starter-react/app/: layout.tsx
agent-starter-react/hooks/: use2FA.ts  useDataChannel.ts  useElicitation.ts  useLogin.ts  useRoom.ts  useSignup.ts
agent-starter-react/lib/: auth.ts  cors.ts  jwt.ts  otp-store.ts  users.ts
agent-starter-react/prisma/: schema.prisma  seed.ts
docs/: AUTHENTICATION_FLOW_VERIFICATION.md  BANKING_JOURNEYS.md  ELICITATION_TESTING.md  SERVER_TO_SERVER_AUTH.md  TEST_USER_DETAILS_FLOW.md  architecture-mcp-token-flow-review.md  architecture.md  prd-voice-ux.md
docs/mock-bank/: architecture.md  prd.md
docs/stories/: 1.0.auth-server-implementation.md  1.1.pre-livekit-authentication.md  1.2.audio-capture-stt-integration.md  1.3.pii-masking-presidio.md  1.4.llm-integration-littellm.md  1.5.mcp-read-tools.md  1.6.tts-response-generation.md  1.7.natural-language-narration.md  2.0.beneficiary-management.md  2.1.payment-request-processing.md  2.2.elicitation-creation-state-management.md  2.3.elicitation-ui-web.md  2.4.elicitation-ui-mobile-biometric.md  2.5.elicitation-response-handling.md  2.6.payment-completion-receipt.md  STORY_DEPENDENCIES.md  journey-1-read-only-user-stories.md  journey-2-transactional-payments-user-stories.md
livekit-voice-agent/: .env  .gitignore  README.md  agent.py  agno_redis_storage.py  agno_tools.py  ai_gateway.py  elicitation_cleanup.py  elicitation_manager.py  elicitation_response_handler.py  mcp_client.py  pii_masking.py  pyproject.toml  pyrightconfig.json  session_manager.py  setup_presidio.sh
livekit-voice-agent/schemas/: __init__.py  elicitation.py
mcp-server/: .gitignore  CASHFREE_INTEGRATION.md  Cashfree_APIs_FIXED.postman_collection.json  Cashfree_Payment_APIs.postman_collection.json  OTP_FLOW_EXPLANATION.md  README.md  TWO_STEP_OTP_PAYMENT.md  backend_client.py  banking_api.py  cache.py  config.py  generate_jwt.py  main.py  masking.py  pyproject.toml  schema.sql  setup-database.sh  test_apis.sh  test_cashfree.py  test_otp_payment.py
mcp-server/mcp_server/: __init__.py  auth.py  banking_api.py  cashfree_payment.py  cashfree_payment_sdk_backup.py.old  config.py  db.py  models.py  otp_store.py  stripe_payment.py
mcp-server/tools/: __init__.py  alert_tools.py  balance_tools.py  loan_tools.py  payment_elicitation.py  payment_tools.py  transaction_tools.py  user_tools.py  utility_tools.py
(+74 files in other folders)
