[project]
name = "hackathon-poc"
version = "0.1.0"
description = "Voice Banking Assistant - Monorepo workspace"
requires-python = ">=3.10"
readme = "README.md"

# Combined dependencies from both mcp-server and livekit-voice-agent
# This allows a single virtualenv to work for both projects
dependencies = [
    # Shared dependencies
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    # MCP Server dependencies
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    # LiveKit Agent dependencies
    "livekit-agents[mcp]>=1.2.0",
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-turn-detector>=1.0.0",
    "redis>=5.0.0",
    "spacy>=3.7.0",
    "pip>=25.3",
    "typer>=0.20.0",
    "agno>=0.1.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Shared tool configurations
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

# UV workspace configuration
[tool.uv.workspace]
members = [
    "mcp-server",
    "livekit-voice-agent",
]

