[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Banking Tools Server using FASTMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    # Shared dependencies (httpx, python-dotenv) are inherited from workspace root
]

[project.optional-dependencies]
dev = [
    # Shared dev dependencies (pytest, pytest-asyncio, black, ruff) are inherited from workspace root
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

